<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JoyMan</string>
    <string name="add_task">添加任务</string>
    <string name="task_title">任务标题</string>
    <string name="task_description">任务描述</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="settings">设置</string>
    <string name="sync">同步</string>
    <string name="export">导出</string>
    <string name="import_text">导入</string>
    <string name="no_tasks">暂无任务</string>
    <string name="new_task_hint">请输入任务标题</string>
    <string name="task_created">任务已创建</string>
    <string name="task_empty_title">任务标题不能为空</string>
    
    <!-- 项目管理 -->
    <string name="manage_projects">管理项目</string>
    <string name="select_project">选择项目</string>
    <string name="all_projects">全部项目</string>
    <string name="project_name_hint">请输入项目名称</string>
    <string name="no_project">无项目</string>
    <string name="default_project">默认项目</string>
    <string name="project_color">项目颜色</string>
    <string name="create_project">创建项目</string>
    <string name="edit_project">编辑项目</string>
    <string name="project_created">项目已创建</string>
    <string name="project_empty_name">项目名称不能为空</string>
</resources>