<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 搜索功能 -->
    <item
        android:id="@+id/action_search"
        android:title="搜索"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_manage_projects"
        android:title="@string/manage_projects"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync"
        android:title="@string/sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/import_text"
        app:showAsAction="never" />

</menu>